Bug 144840 - Special Paste RTF: Table with merged cells messed up
Summary: Special Paste RTF: Table with merged cells messed up
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-09-30 15:21 UTC by Telesto
Modified: 2021-10-14 21:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (8.92 KB, application/vnd.oasis.opendocument.text)
2021-09-30 15:21 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-09-30 15:21:18 UTC
Description:
Special Paste RTF: Table with merged cells messed up

Steps to Reproduce:
1. Open the attached file
2. CTRL+A
3. CTRL+X
4. CTRL+SHIFT+V
5. Paste as RTF

Actual Results:
Broken

Expected Results:
Same as source document


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b60b6bfaafa1315e07108dba50f016975b619c59
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL

not in
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 68bbc75dfeb7c910de7e3d40e840c9959d6875c0
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-09-30 15:21:32 UTC
Created attachment 175426 [details]
Example file
Comment 2 Ezinne 2021-10-01 19:41:52 UTC
Reproducible in:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: c2de581d1943df2d84f2b71817b6a8bee41f0217
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-09-30_21:07:11
Calc: threaded
Comment 3 Aron Budea 2021-10-13 18:00:04 UTC
This started crashing at the paste special step with the first commit below. The crashing ended at the second commit, but the result was already bad. I'm fairly sure the regression started with the first commit (but haven't confirmed it). Adding CC: to Noel Grandin.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=426930d0c4bd6f782a04a92e8a36e92cd65e186f
author		Noel Grandin <noelgrandin@gmail.com>	2021-08-28 08:35:29 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-08-28 15:13:20 +0200

"speedup dynamic_cast to SwTextFrame"

https://cgit.freedesktop.org/libreoffice/core/commit/?id=aac3ef9df34b38d8fc786f13b0336c7cbe68ee51
author		Noel Grandin <noel.grandin@collabora.co.uk>	2021-08-31 12:07:56 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-08-31 22:13:15 +0200

"fix crash in select-all"
Comment 4 Aron Budea 2021-10-13 20:54:51 UTC
Actually, that was a red herring. The regression was introduced in the range, but it's from the following commit, confirmed by reverting.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e3ea0e32657a41b48d9d9d28f6ad15af4c2a7abc
author		Noel Grandin <noel@peralex.com>	2021-08-28 17:28:34 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-08-29 09:33:52 +0200

tdf#135683 speed up large writer table load
Comment 5 Commit Notification 2021-10-14 11:22:34 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/12cac92a7f803808d971071fb091ba8572db587a

tdf#144840 Special Paste RTF: Table with merged cells messed up

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2021-10-14 21:31:53 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a12727702b4132bb0576062afe68e39a87a6a426

tdf#144840: sw_uiwriter3: Add unittest

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.