tdf#144840 Special Paste RTF: Table with merged cells messed up

Revert "tdf#135683 speed up large writer table load"

This reverts commit e3ea0e32657a41b48d9d9d28f6ad15af4c2a7abc.

Change-Id: If36077de62cbff8a3157b0824d4713c10e90f45e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/123580
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>